<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<name>codbex - kronos - parent</name>
	<description>codbex kronos</description>
	<groupId>com.codbex.kronos</groupId>
	<artifactId>codbex-kronos-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<inceptionYear>2022</inceptionYear>

	<url>http://www.codbex.com</url>
	<organization>
		<name>codbex</name>
		<url>http://www.codbex.com</url>
	</organization>
	<scm>
		<url>https://github.com/codbex/codbex-kronos</url>
	</scm>

	<modules>
		<module>components</module>
		<module>application</module>
		<module>branding</module>
		<module>modules</module>

		<!--
	    <module>resources</module>
	    <module>releng</module>
	    <module>coverage-aggregate</module>
	    -->
	</modules>

	<dependencies>

		<!-- Platform -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>compile</scope>
		</dependency>

		<!-- Commons -->
		<dependency>
			<groupId>org.eclipse.dirigible</groupId>
			<artifactId>dirigible-commons-config</artifactId>
		</dependency>

		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-to-slf4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Date Type Utils -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
		</dependency>
		

		<!-- Swagger -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${org.springdoc.openapi.ui.version}</version>
		</dependency>

		<!-- Data Access -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
		</dependency>

		<!-- WebJars -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator</artifactId>
			<version>${webjars-locator}</version>
		</dependency>

		<!-- Olingo -->
		<dependency>
      <groupId>com.codbex.olingo</groupId>
			<artifactId>olingo-odata2-lib</artifactId>
			<version>${olingo.version}</version>
			<type>pom</type>
			<exclusions>
				<exclusion>
					<groupId>javax.ws.rs</groupId>
					<artifactId>javax.ws.rs-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons.io}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-inline</artifactId>
        <version>5.2.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest-all</artifactId>
        <version>${hamcrest.all.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.dirigible</groupId>
        <artifactId>dirigible-dependencies</artifactId>
        <version>${dirigible.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
				  <plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${maven.surefire.plugin.version}</version>
						<configuration>
							<argLine>
								--add-opens java.base/java.lang=ALL-UNNAMED
								--add-opens java.base/java.math=ALL-UNNAMED
								--add-opens java.base/java.util=ALL-UNNAMED
								--add-opens java.base/java.util.concurrent=ALL-UNNAMED
								--add-opens java.base/java.net=ALL-UNNAMED
								--add-opens java.base/java.text=ALL-UNNAMED
							</argLine>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<rules>
								<rule>
									<element>SOURCEFILE</element>
									<excludes>
										<exclude>*src/test/*</exclude>
									</excludes>
								</rule>
							</rules>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven.compiler.plugin.version}</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<debug>true</debug>
							<debuglevel>lines,vars,source</debuglevel>
						</configuration>
					</plugin>
					<!-- <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-javadoc-plugin</artifactId>
                      <version>3.2.0</version>
                      <configuration>
                        <source>${java.version}</source>
                      </configuration>
                      <executions>
                        <execution>
                          <id>attach-javadocs</id>
                          <goals>
                            <goal>jar</goal>
                          </goals>
                        </execution>
                      </executions>
                      <configuration> <failOnError>false</failOnError> </configuration>
                      <dependencies>
                        <dependency>
                          <groupId>org.apache.commons</groupId>
                          <artifactId>commons-lang3</artifactId>
                          <version>${commons.lang3}</version>
                        </dependency>
                      </dependencies>
                    </plugin> -->

				</plugins>
			</build>
		</profile>
		<profile>
			<id>license</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>com.mycila</groupId>
						<artifactId>license-maven-plugin</artifactId>
						<version>${license-maven-plugin.version}</version>
						<inherited>true</inherited>
						<configuration>
							<header>${license.header.location}</header>
							<aggregate>true</aggregate>
							<properties>
								<inceptionYear>${project.inceptionYear}</inceptionYear>
								<currentYear>${currentYear}</currentYear>
							</properties>
							<includes>
								<include>src/**/*.java</include>
								<include>src/**/*.xml</include>
								<include>src/**/*.js</include>
							</includes>
							<excludes>
								<exclude>**/logback.xml</exclude>
								<exclude>**/logback-test.xml</exclude>
								<exclude>**/src/test/resources/**</exclude>
								<exclude>resources/resources-neo-sdk/**</exclude>
							</excludes>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>com.mycila</groupId>
								<artifactId>license-maven-plugin-git</artifactId>
								<version>${license-maven-plugin.version}</version>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<id>format-license</id>
								<phase>initialize</phase>
								<goals>
									<goal>format</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven.compiler.plugin.version}</version>
						<configuration>
							<source>${maven.compiler.source}</source>
							<target>${maven.compiler.target}</target>
							<debug>true</debug>
							<debuglevel>lines,vars,source</debuglevel>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<properties>
		<project.title>codbex kronos</project.title>

		<java.version>11</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<dirigible.version>10.2.10</dirigible.version>
		<dirigible.acorn.version>7.2.0</dirigible.acorn.version>

		<java.version>11</java.version>
		<maven.resource.plugin.version>3.3.0</maven.resource.plugin.version>
		<maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
		<maven.clean.plugin.directory>src/main/resources/META-INF/dirigible</maven.clean.plugin.directory>
		<maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
		<maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.scm.plugin.version>1.13.0</maven.scm.plugin.version>
		<scmVersionType>branch</scmVersionType>
		<commons.io>2.16.1</commons.io>
		<commons.codec>1.15</commons.codec>
		<commons.lang3>3.14.0</commons.lang3>
		<commons.exec>1.3</commons.exec>
		<commons.text>1.10.0</commons.text>
		<hamcrest.all.version>1.3</hamcrest.all.version>
		<retrofit.version>1.8.0</retrofit.version>
		<okhttp3.version>4.10.0</okhttp3.version>
		<slf4j.version>2.0.11</slf4j.version>
		<slf4j.simple.version>1.7.12</slf4j.simple.version>
		<logback.version>1.4.5</logback.version>
		<commons-dbcp2.version>2.12.0</commons-dbcp2.version>
		
    <h2database.version>2.2.224</h2database.version>
    <postgresql.version>42.7.1</postgresql.version>
    <ngdbc.version>2.19.16</ngdbc.version>
    <snowflake.version>3.14.3</snowflake.version>
    <mongodb.version>3.12.14</mongodb.version>

    <!--
		<activemq.version>6.0.1</activemq.version>
		-->
		<jsr250-api.version>1.0</jsr250-api.version>
		<jetty.version>9.4.48.v20220622</jetty.version>
		<lucene.version>9.4.2</lucene.version>
		<chemistry.version>1.1.0</chemistry.version>
		<flowable.version>6.8.0</flowable.version>
		<jaxb.version>2.3.1</jaxb.version>
		<jaxws.version>2.3.3</jaxws.version>
		<jakarta.ws.rs-api.version>2.1.5</jakarta.ws.rs-api.version>
		<license-maven-plugin.version>4.3</license-maven-plugin.version>
		<persistence.api.version>2.2.3</persistence.api.version>
		<jgit.version>6.4.0.202211300538-r</jgit.version>
		<javax.mail.api.version>1.6.4</javax.mail.api.version>
		<olingo.version>3.1.3</olingo.version>
		<kafka.version>3.3.1</kafka.version>
		<git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
		<caffeine.version>3.1.2</caffeine.version>
		<liquibase-core.version>4.16.1</liquibase-core.version>
		<commons-csv.version>1.9.0</commons-csv.version>
		<jquery-ui.version>1.13.0</jquery-ui.version>
		<sap-theming__theming-base-content.version>11.1.42</sap-theming__theming-base-content.version>
		<fundamental-styles.version>0.24.4</fundamental-styles.version>
		<angular-aria.version>1.8.2</angular-aria.version>
		<split.js.version>1.6.5</split.js.version>
		<diff.version>5.1.0</diff.version>
		<monaco-editor.version>0.33.0</monaco-editor.version>
		<requirejs.version>2.3.6</requirejs.version>
		<jstree.version>3.3.12</jstree.version>
		<jquery.version>3.6.0</jquery.version>
		<jqplot.version>1.0.8r1250</jqplot.version>
		<bootstrap.version>3.3.7</bootstrap.version>
		<es5-shim.version>4.6.7</es5-shim.version>
		<angular-file-upload.version>2.6.1</angular-file-upload.version>
		<angularjs.version>1.8.2</angularjs.version>
		<fontawesome.version>4.7.0</fontawesome.version>
		<classgraph.version>4.8.154</classgraph.version>
		<commons-compress.version>1.22</commons-compress.version>
		<testcontainers.elasticsearch.version>1.17.6</testcontainers.elasticsearch.version>
		<testcontainers.version>1.17.6</testcontainers.version>
		<testcontainers.rabbitmq.version>1.17.6</testcontainers.rabbitmq.version>
		<amqp.client.version>5.16.0</amqp.client.version>
		<elasticsearch.client.version>7.7.1</elasticsearch.client.version>
		<jetcd.core.version>0.7.5</jetcd.core.version>
		<jetcd.test.version>0.5.4</jetcd.test.version>
		<logcaptor.version>2.7.10</logcaptor.version>
		<exec.maven.plugin>3.0.0</exec.maven.plugin>
		<jackson.databind.version>2.16.1</jackson.databind.version>

		<spring-context-support.version>5.3.24</spring-context-support.version>
		<webjars-locator>0.50</webjars-locator>

		<keycloak-adapter-bom.version>20.0.2</keycloak-adapter-bom.version>
		<hikaricp.version>5.0.1</hikaricp.version>
		<validator.version>1.7</validator.version>
		<quartz.version>2.3.2</quartz.version>
		<c3p0.version>0.9.5.5</c3p0.version>
		<graalvm.version>22.3.1</graalvm.version>
		<guava.version>33.0.0-jre</guava.version>
		<icu4j.version>72.1</icu4j.version>
		<commons-collections.version>3.2.2</commons-collections.version>
		<commons-collections4.version>4.4</commons-collections4.version>
		<velocity.version>2.3</velocity.version>
		<wikitext.version>3.0.45.202211090110</wikitext.version>
		<flexmark.version>0.64.0</flexmark.version>
		<qldb.driver.version>2.3.1</qldb.driver.version>
		<qldb.sdk.version>1.12.386</qldb.sdk.version>
		<cassandra.version>1.17.6</cassandra.version>
		<cassandra.driver.version>3.11.3</cassandra.driver.version>
		<jedis.version>4.3.1</jedis.version>
		<spark.version>3.3.1</spark.version>
		<path-to-regexp.version>6.2.1</path-to-regexp.version>
		<javax.websocket-api.version>1.1</javax.websocket-api.version>
		<jacoco.version>0.8.11</jacoco.version>

		<jakarta.validation.version>3.0.2</jakarta.validation.version>
		<org.springdoc.openapi.ui.version>1.7.0</org.springdoc.openapi.ui.version>
		<swagger-annotations.version>1.6.9</swagger-annotations.version>

		<antlr4-runtime.version>4.13.1</antlr4-runtime.version>
		<antlr4-maven-plugin.version>4.13.1</antlr4-maven-plugin.version>
		<junitparams.version>1.1.1</junitparams.version>
		<hamcrest.all.version>1.3</hamcrest.all.version>
		<javax.activation.version>1.2.0</javax.activation.version>
		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
		<scp-cf.version>4.24.0</scp-cf.version>
		<jetbrains.annotations.version>24.1.0</jetbrains.annotations.version>

		<profile.content.phase>none</profile.content.phase>

		<license.header.location>licensing-header.txt</license.header.location>
		
		<!-- old dependencies - to be revised 

		<sonar.organization>codbex</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.projectName>kronos</sonar.projectName>
		<sonar.coverage.exclusions>**/*.js,**/*.mjs,**/*.xsjs</sonar.coverage.exclusions>
		<sonar.cpd.exclusions>**/releng/**/*.*</sonar.cpd.exclusions>
		<sonar.coverage.jacoco.xmlReportPaths>
      ${project.basedir}/coverage-aggregate/target/site/jacoco-aggregate/jacoco.xml
    </sonar.coverage.jacoco.xmlReportPaths>

		<maven.resource.plugin.version>3.3.0</maven.resource.plugin.version>
		<maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
		<maven.clean.plugin.directory>src/main/resources/META-INF/dirigible</maven.clean.plugin.directory>
		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.scm.plugin.version>1.13.0</maven.scm.plugin.version>
		<commons.io>2.11.0</commons.io>
		<commons.codec>1.10</commons.codec>
		<cxf.version>3.1.11</cxf.version>
		<gson.version>2.10</gson.version>
		<guava.version>31.1-jre</guava.version>
		<slf4j.version>2.0.3</slf4j.version>
		<slf4j.simple.version>1.7.12</slf4j.simple.version>
		<logback.version>1.3.0-beta0</logback.version>
		<com.h2database.version>2.1.214</com.h2database.version>
		<derby.version>10.12.1.1</derby.version>
		<activemq.version>5.14.5</activemq.version>
		<jsr250-api.version>1.0</jsr250-api.version>
		<jetty.version>9.4.48.v20220622</jetty.version>
		<lucene.version>7.0.1</lucene.version>
		<chemistry.version>1.1.0</chemistry.version>
		<flowable.version>6.3.0</flowable.version>
		<jaxws.version>2.3.0</jaxws.version>
		<olingo.version>2.0.11</olingo.version>
		<retrofit.version>1.8.0</retrofit.version>
		<okhttp.version>2.7.5</okhttp.version>
		<xsuaa.client.version>2.2.0</xsuaa.client.version>
		<apache.httpclient.version>4.5.8</apache.httpclient.version>
		<commons.lang3>3.12.0</commons.lang3>
		<license-maven-plugin.version>4.2.rc3</license-maven-plugin.version>
		<selenium.version>4.5.0</selenium.version>
		<selenium.webdriver.manager.version>5.3.1</selenium.webdriver.manager.version>
		<neo-java-web-sdk.version>4.8.9</neo-java-web-sdk.version>
		<neo-java-web-sdk.javax.activation.version>1.2.0</neo-java-web-sdk.javax.activation.version>
		<neo-java-web-sdk.jaxb.version>2.2.11</neo-java-web-sdk.jaxb.version>
		<jaxb.version>2.3.1</jaxb.version>
		
		<maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
		<commons-csv.version>1.9.0</commons-csv.version>
		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
		<javax.websocket-api.version>1.1</javax.websocket-api.version>
		<jacoco.version>0.8.8</jacoco.version>
		<hakky.logcaptor.version>2.7.10</hakky.logcaptor.version>
		<httpmime.version>4.5.13</httpmime.version>
		<httpasyncclient.version>4.1.5</httpasyncclient.version>
		<jackson.databind.version>2.14.2</jackson.databind.version>
		<exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
		<license.header.location>licensing-header.txt</license.header.location>
		
		-->


	</properties>
</project>
